feat: add wechat bind api
